--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/Peter-TMK/ExcelShop#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "prettier": "^2.8.3"
   }
 }
