--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.9.0",
     "morgan": "^1.10.0",
     "prettier": "^2.8.3"
   }
