--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test jest --testTimeout=5000",
-    "start": "nodemon app"
+    "test": "cross-env NODE_ENV=test jest --testTimeout=5000 --watchAll",
+    "start": "nodemon server"
   },
   "repository": {
     "type": "git",
