--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "mongoose": "^6.9.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "prettier": "^2.8.3"
   },
   "devDependencies": {
