--- a/server/package.json
+++ b/server/package.json
@@ -24,10 +24,14 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "prettier": "^2.8.3"
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "prettier": "^2.8.3",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "jest": "^29.4.1",
